--- a/compose.yaml
+++ b/compose.yaml
@@ -1,19 +1,30 @@
 services:
   mysql_database:
+
     container_name: watermark_api_database_container
+
     image: mysql:latest
+
     ports:
       - "${MYSQL_PORT}:3306" # Should be 4000
+
     environment:
       MYSQL_ROOT_USER: ${DB_USER}
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
 
+  
   watermark_api:
+
     image: watermark_api_image:latest
+
     ports:
       - "${WATERMARK_API_PORT}:8080" # Should be 4005
+
     environment:
-      env_file: /etc/environment
+      - DB_HOST=localhost
+      - DB_PORT=${MYSQL_PORT}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
 
     volumes:
       - original_image:/original_image
