--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.datasource.url=jdbc:mysql://home_server_database_container:${MYSQL_PORT}/${MYSQL_DATABASE_NAME}
-spring.datasource.url=jdbc:mysql://127.0.0.1:4000/test
+spring.datasource.url=jdbc:mysql://localhost:3306/watermark_images
 
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
@@ -8,3 +8,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.application.name=demo
+
