--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,13 @@
 	</parent>
 
 	<dependencies>
-
+		
+		<dependency>
+  			<groupId>net.coobird</groupId>
+  			<artifactId>thumbnailator</artifactId>
+  			<version>0.4.20</version>
+		</dependency>
+  
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
